# Claude-code-to-Browser

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml  requirements.txt  server.py  web.py  优化总结.md  技术拆解.md
docs/: capabilities.md  configuration.md  installation.md  roadmap.md  routing-and-permissions.md  security.md
docs/superpowers/plans/: 2026-05-15-python-package-init.md
docs/superpowers/specs/: 2026-05-15-python-package-init-design.md
hooks/: guard.py
scripts/: doctor.py  install_hook.py  install_instructions.py
src/cc_web_mcp/: __main__.py  cli.py  config.py  doctor.py  install.py  server.py  web.py
src/cc_web_mcp/data/: default_config.json
src/cc_web_mcp/hooks/: guard.py
tests/: conftest.py  test_cli.py  test_config.py  test_doctor.py  test_guard.py  test_init.py  test_install_hook.py  test_install_instructions.py  test_package_metadata.py  test_server_status.py  test_web.py
